Added more graphs